# f1-etl-postgres-airflow

./: .env.example  .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml  update_view.sql
config/: airflow.cfg  settings.py
dags/: f1_api_pipeline_dag.py
env/: .env.example
postgres-init/: 01-init.sql
scripts/: audit.py  extract.py  load.py  pipeline.py  transform.py
utils/: db.py  logger.py
