[project]
name = "f1-pipeline"
version = "0.2.0"
description = "Pipeline de dados Fórmula 1 — ETL modular com PostgreSQL"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.12",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "python-dotenv>=1.0.0",
]
